refactor swagger(not finished) + primeros endpoints
